# local-codex-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: AUTH.md  CLOUDFLARE_TUNNEL.md  ENGINEERING_CONTROL.md  FULL_LOOP_SMOKE.md  PRODUCT_SHAPE.md  README.zh-CN.md  RELEASE.md  SECURITY.md  TOOL_PROFILES.md
scripts/: install.sh  start_local.sh
src/local_codex_bridge/: auth.py  cli.py  config.py  init_wizard.py  server.py  task_runner.py
tests/: test_auth.py  test_changed_file_diff.py  test_changed_file_text.py  test_config.py  test_doctor.py  test_git_branch_workflow.py  test_git_commit_and_push.py  test_git_diff.py  test_git_sync_local_branch.py  test_github_pr_workflow.py  test_init_wizard.py  test_mutation_diagnostics.py  test_review_package.py  test_task_runner.py
