[project]
name = "local-codex-bridge"
version = "0.1.0"
description = "A local MCP bridge that lets ChatGPT start and inspect local Codex CLI tasks across multiple projects."
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.scripts]
local-codex-bridge = "local_codex_bridge.cli:app"

[tool.ruff]
line-length = 100

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
